<resources>
    <string name="app_name">PakketjesCentrale</string>
    <string name="title_home">GAK Pakketjes Centrale</string>
    <string name="title_dashboard">Mijn Pakketjes</string>
    <string name="title_notifications">Voor Anderen</string>
    <string name="login_button_text">LOG IN</string>
    <string name="signup_button_text">REGISTREREN</string>
    <string name="text_of">Of</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="title_activity_new_user">Aanmelden Nieuwe Gebruiker</string>
    <string name="text_huisnummer">Huisnummer</string>
    <string name="text_toevoeging">Toevoeging</string>
    <string name="add_parcel">Add parcel</string>
    <string name="title_activity_new_parcel">Activity new parcel</string>
    <string-array name="spinHuisnummer">
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
    </string-array>
    <string-array name="spinToevoeging">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
    </string-array>
</resources>
